--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -32,6 +32,7 @@
 		<protobuf-java.version>4.30.2</protobuf-java.version>
 		<spring-grpc.version>0.8.0</spring-grpc.version>
 		<spring-modulith.version>1.3.5</spring-modulith.version>
+		<telegram.version>6.5.0</telegram.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -125,6 +126,15 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-websocket</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>${telegram.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
