Add storage system for generator module

--- a/backend/src/main/resources/db/changelog/changelog-0.0.yaml
+++ b/backend/src/main/resources/db/changelog/changelog-0.0.yaml
@@ -99,11 +99,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: parameters
-                  type: jsonb
-              - column:
-                  name: success
-                  type: boolean
-                  defaultValueBoolean: true
+                  type: varchar(255)
         - addForeignKeyConstraint:
             baseTableName: report_access_log
             baseColumnNames: telegram_user_id
