--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
   telegram:
     bot:
       name: energy_monitoring_1akBot
-      token: 7556649009:AAFfD--f-fLcjIE29GNWM9b7jUrkL0z-neQ
+      token:
 
   report:
     server:
