--- a/backend/src/main/resources/db/changelog/changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changelog-0.0.yaml
+  - include:
+      file: db/changelog/changelog-0.1.yaml
